@@ -77,6 +77,7 @@ Version 1.6.current:
     * You can have a common cache_dir for your farm (will save a bit space
       and cpu time as it shares some stuff).
       You need to set "cache_dir = '/some/farm/cachedir' in your farmconfig.
+    * Added XMLRPC methods for attachment handling. Thanks to Matthew Gilbert.
 
   Bugfixes:
     * on action "info" page, "revert" link will not be displayed for empty page
